[package]
name = "market_data_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = "3.6.1"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "bigdecimal",
] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["compression-full", "cors"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
